# mercurius

./: .env.example  .gitignore  .rustfmt.toml  Cargo.toml  index.py  rotas.md
.github/workflows/: check-dev.yml  check-main.yml
.swm/: backend-routes.eygswlej.sw.md  database-er.g1wc0vd3.sw.md  swimm.json
api/: _example.py  route.py
src/: lib.rs  main.rs
src/auth/: check.rs  flows.rs  mod.rs  pats.rs  session.rs  validate.rs
src/auth/email/: mod.rs
src/database/: mod.rs
src/database/models/: categories.rs  flow_item.rs  ids.rs  mod.rs  notification_item.rs  pat_item.rs  project_item.rs  report_item.rs  session_item.rs  team_item.rs  thread_item.rs  user.rs  version_item.rs
src/models/: error.rs  ids.rs  mod.rs  notifications.rs  pack.rs  pats.rs  projects.rs  reports.rs  sessions.rs  teams.rs  threads.rs  users.rs
src/routes/: index.rs  mod.rs  not_found.rs
src/routes/v0/: company.rs  mod.rs  search.rs  user.rs
src/routes/v1/: mod.rs
src/routes/v3/: mod.rs
src/util/: captcha.rs  ext.rs  guards.rs  img.rs  logging.rs  mod.rs  scheduler.rs  validate.rs  webhook.rs
src/utils/: args.rs  config.rs  constants.rs  env.rs  logging.rs  mod.rs
