[package]
name = "mercurius"
version = "0.0.0"
authors = ["arthurbr <arthurbr@cyrusium.studio>"]
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.3.1"
actix-rt = "2.8.0"
actix-multipart = { version = "0.6.0", default-features = false }
actix-cors = "0.6.4"

tokio = { version = "1.29.1", features = ["sync"] }
tokio-stream = "0.1.14"

futures = "0.3.28"
futures-timer = "3.0.2"
async-trait = "0.1.71"
dashmap = "5.5.0"
lazy_static = "1.4.0"

meilisearch-sdk = "0.24.1"
reqwest = { version = "0.11.18", features = ["json", "multipart"] }

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.1"
chrono = { version = "0.4.26", features = ["serde"]}

rand = "0.8.5"
rand_chacha = "0.3.1"
bytes = "1.4.0"
base64 = "0.21.2"
sha1 = { version = "0.10.5", features = ["std"] }
sha2 = "0.10.7"
hmac = "0.12.1"
argon2 = { version = "0.5.0", features = ["std"] }
hex = "0.4.3"
zxcvbn = "2.2.2"
totp-rs = { version = "5.0.2", features = ["gen_secret"] }

url = "2.4.0"
urlencoding = "2.1.2"

zip = "0.6.6"

validator = { version = "0.16.1", features = ["derive", "phone"] }
regex = "1.8.4"
censor = "0.3.0"

dotenvy = "0.15.7"
simplelog = { version = "0.12.1", features = ["paris"] }
thiserror = "1.0.41"

sqlx = { version = "0.7.1", features = ["offline", "runtime-tokio-rustls", "postgres", "chrono", "macros", "migrate", "decimal", "json"] }
rust_decimal = { version = "1.30.0", features = ["serde-with-float", "serde-with-str"] }
rust_decimal_macros = "1.30"
redis = { version = "0.23.0", features = ["tokio-comp", "ahash", "r2d2"]}

image = "0.24.6"
color-thief = "0.2.2"

woothee = "0.13.0"

lettre = "0.10.4"
once_cell = "1.18.0"

clap = "4.3.19"
